--- a/leihsldap/templates/error.html
+++ b/leihsldap/templates/error.html
@@ -25,6 +25,6 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 	<body>
 		<h1>{{ title }}</h1>
 		<p>{{ message }}</p>
-		<p><a href="{{ leihs_url }}">Return to Leihs →</a></p>
+		<p><a href="{{ leihs_url }}">{{ i18n.return_to_leihs }} →</a></p>
 	</body>
 </html>
